--- a/package.json
+++ b/package.json
@@ -1,37 +1,29 @@
 {
   "name": "react-webpack",
   "version": "1.0.0",
-  "description": "",
-  "main": "start.js",
+  "description": "React webpack setup",
+  "main": "aa",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/scream-ya/react-webpack.git"
+    "start": "webpack-dev-server --open"
   },
   "keywords": [],
-  "author": "",
+  "author": "Beveloper",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/scream-ya/react-webpack/issues"
-  },
-  "homepage": "https://github.com/scream-ya/react-webpack#readme",
   "devDependencies": {
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "awesome-typescript-loader": "^5.2.1",
-    "css-loader": "^5.2.6",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.1.0",
-    "source-map-loader": "^3.0.0",
-    "typescript": "^4.3.5",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "css-loader": "^3.5.2",
+    "html-webpack-plugin": "^4.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
